# drift-lens-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
drift_lens_lab/: __init__.py  __main__.py  cli.py  detectors.py  evaluation.py  metrics.py  models.py  reports.py  runner.py  streams.py
examples/: run_experiment.py
tests/: test_cli.py  test_detectors.py  test_evaluation.py  test_metrics.py  test_models.py  test_reports.py  test_streams.py
