[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-lens-lab"
version = "0.1.0"
description = "Tiny ML lab for simulating concept drift, online classifiers, and drift reports"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Abdul Salam", email = "124217275+get2salam@users.noreply.github.com"}]
keywords = ["machine-learning", "concept-drift", "online-learning", "ml-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
drift-lens-lab = "drift_lens_lab.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drift_lens_lab*"]
